attachinary relics fixed

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -8,7 +8,7 @@
             <div class="col-xs-12 col-sm-3">
               <div class="book-card">
                 <div class="card-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-         url(<%= cl_image_path book.cover_photo, :default_image => "default_image.png" %>);"></div>
+       url('<%= cl_image_path book.cover_photo, :default_image => "default_image.png" %>');"></div>
                 <div class="card-description">
                   <h2><%= book.title %></h2>
                   <p><%= link_to "Edit this book", "dashboard/update/#{book.id}" %></p>
@@ -27,7 +27,7 @@
             <div class="col-xs-12 col-sm-3">
               <div class="book-card">
                 <div class="card-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-         url(<%= cl_image_path book.cover_photo, :default_image => "default_image.png"%>);"></div>
+       url('<%= cl_image_path book.cover_photo, :default_image => "default_image.png" %>');"></div>
                 <div class="card-description">
                   <h2><%= book.title %></h2>
                   <p>From: <%= book.user.full_name %></p>
