--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,7 +12,7 @@
         <%= f.input :description %>
         <%= f.input :isbn %>
         <%= f.input :publisher %>
-        <%= f.input :photo, as: :attachinary %>
+        <%= f.input :photo %>
         <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit %>
       </div>
